Increase the order icon size and fix alignments

--- a/app/styles/results.less
+++ b/app/styles/results.less
@@ -153,20 +153,24 @@ header.results-label h3 {
         table.grouped-transactions:first-of-type {
           border-bottom: none;
 
-          td.status {
-            &:first-of-type {
-              padding-left: 25px;
-            }
+          td:first-of-type {
+            padding-left: 25px;
           }
         }
 
         table.grouped-transactions {
           border-bottom: none;
 
-          td.status {
-            &:first-of-type {
-              padding-left: 50px;
-            }
+          td:first-of-type {
+            padding-left: 50px;
+          }
+        }
+      }
+
+      &.divided {
+        table.grouped-transactions {
+          td:first-of-type {
+            padding-left: 10px;
           }
         }
       }
@@ -200,6 +204,7 @@ header.results-label h3 {
             }
           }
         }
+
         td {
           a.active {
             pointer-events: none;
@@ -210,16 +215,22 @@ header.results-label h3 {
             }
           }
 
+          &:first-of-type {
+            padding-left: 25px;
+          }
+
           &.status {
             text-transform: none;
             padding-left: 10px;
 
-            &:first-of-type {
-              padding-left: 25px;
-            }
+            & > a > span {
+              &:before {
+                margin-left: 2px;
+              }
 
-            a > span > .secondary {
-              margin-left: 14px;
+              & > .primary, & > .secondary {
+                margin-left: 16px;
+              }
             }
 
             &.orders > a > span {
@@ -227,12 +238,10 @@ header.results-label h3 {
                 font-family: 'Balanced-Icon';
                 background-color: transparent;
                 &:extend(.icon-orders:before);
-                font-size: 10px;
+                font-size: 12px;
                 color: @gray4;
                 margin-top: -14px;
-              }
-              > .primary {
-                margin-left: 14px;
+                margin-left: 0;
               }
             }
 
@@ -261,10 +270,6 @@ header.results-label h3 {
               &.lost:before {
                 color: @imperialRed80;
               }
-
-              > .primary {
-                margin-left: 14px;
-              }
             }
 
             a > span:after {
@@ -273,7 +278,7 @@ header.results-label h3 {
               border-left: 2px solid @gray3;
               height: 30px;
               margin-top: -19px;
-              margin-left: 3px;
+              margin-left: 5px;
             }
           }
         }
